Update to Mojarra 2.0.2 Add hook in PluginEngine for post-processing classes. This will allow for things like JsfPluginEngine and WeldPluginEngine Added JsfPluginEngine Added tests for JsfPluginEngine

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <properties>
         <facestester.version>0.4-SNAPSHOT</facestester.version>
-        <jsf.version>2.0.1-b02</jsf.version>
+        <jsf.version>2.0.2</jsf.version>
 
         <weld.api.version>1.0-SNAPSHOT</weld.api.version>
         <weld.core.version>1.0.0-SNAPSHOT</weld.core.version>
@@ -88,10 +88,18 @@
             <artifactId>jta</artifactId>
             <version>1.1</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
             <scope>provided</scope>
         </dependency>
 
