--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>org.eclipse.persistence.jpa</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <!--- COMPILE deps -->
         <dependency>
