--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,11 @@
         </repository>
         <repository>
            <id>EclipseLink Repo</id>
-           <!-- <url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/technology/eclipselink/maven.repo</url> --> 
            <url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
+        </repository>
+        <repository>
+           <id>Sonatype Sourceforge Nexus Maven Repository</id>
+           <url>http://oss.sonatype.org/content/groups/sourceforge/</url>
         </repository>
     </repositories>
 
@@ -69,6 +72,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.sun.mojarra</groupId>
+            <artifactId>mojarra-scales</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>javax.persistence</artifactId>
             <version>2.0.0-M9</version>
@@ -99,6 +107,12 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.0.2.GA</version>
+        </dependency>
+
 
         <!-- RUNTIME deps -->
         <dependency>
