--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -52,19 +52,22 @@
             <artifactId>validation-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mojarra</groupId>
+            <artifactId>mojarra-scales</artifactId>
+        </dependency>
 
         <!--- COMPILE deps -->
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
         </dependency>
-        <!--
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <version>2.2</version>
             <scope>provided</scope>
         </dependency>
-        -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
@@ -77,14 +80,6 @@
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
-        <!--
-        <dependency>
-            <groupId>org.jboss.weld.servlet</groupId>
-            <artifactId>weld-servlet</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        -->
 
         <dependency>
             <groupId>org.glassfish.web</groupId>
@@ -125,22 +120,9 @@
             <artifactId>dbunit</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>javax.el</groupId>
-            <artifactId>el-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipselink.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>4.0.2.GA</version>
         </dependency>
     </dependencies>
 
@@ -163,5 +145,6 @@
         </plugins>
     </build>
 </project>
+
 
 
