--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>webapp</artifactId>
     <packaging>war</packaging>
     <version>${project.parent.version}</version>
-    <name>Meet Space Web App</name>
+    <name>Meetspace Web App</name>
 
     <dependencies>
         <dependency>
@@ -145,6 +145,7 @@
         </plugins>
     </build>
 </project>
+
 
 
 
