Start an OSGi-based plugin engine.  If it works, it will replace my brute force engine Moved @Plugin, etc to new plugin-api module for lighter-weight plugin dev

--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,9 @@
     </repositories>
 
     <modules>
-        <module>webapp</module>
+        <module>plugin-api</module>
         <module>plugin-engine</module>
+        <module>webapp</module>
     </modules>
 
     <properties>
