--- a/plugin-engine/pom.xml
+++ b/plugin-engine/pom.xml
@@ -17,6 +17,11 @@
     <dependencies>
         <!-- PROVIDED deps -->
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>plugin-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
             <scope>provided</scope>
@@ -68,6 +73,16 @@
                     <artifactId>jsf-facelets</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <version>2.0.4</version>
         </dependency>
     </dependencies>
 </project>
