More metadata overrides added An Upload model was started Added HtmlSelectOneMenu as the default for Boolean fields

--- a/webapp/src/main/resources/META-INF/autoadmin.properties
+++ b/webapp/src/main/resources/META-INF/autoadmin.properties
@@ -6,10 +6,14 @@ autoadmin.model.Meeting.field.moreInfo.label=More Info
 
 autoadmin.model.Sponsor
 
-autoadmin.model.Upload
+autoadmin.model.Upload.uploadfield=path
+autoadmin.model.Upload.field.path.display=false
 
 autoadmin.model.GroupMember.title=Member
 
-autoadmin.model.BlogEntry
+autoadmin.model.BlogEntry.label=Blog Entry
+autoadmin.model.BlogEntry.field.body.html=true
+autoadmin.model.Upload.field.postedDate.display=false
+autoadmin.model.Upload.field.modifiedDate.display=false
 
 autoadmin.model.Registration
