--- a/webapp/src/main/resources/META-INF/autoadmin.properties
+++ b/webapp/src/main/resources/META-INF/autoadmin.properties
@@ -1,3 +1,4 @@
+autoadmin.packages=com.steeplesoft.meetspace.model
 autoadmin.models=Meeting,Sponsor,Upload,GroupMember,BlogEntry,Registration
 
 autoadmin.model.Meeting.field.description.html=true
