--- a/webapp/src/main/resources/META-INF/autoadmin.properties
+++ b/webapp/src/main/resources/META-INF/autoadmin.properties
@@ -1,5 +1,5 @@
 autoadmin.packages=com.steeplesoft.meetspace.model
-autoadmin.models=Meeting,Sponsor,Upload,GroupMember,BlogEntry,Registration
+autoadmin.models=Meeting,Sponsor,Attachment,GroupMember,BlogEntry,Registration
 
 autoadmin.model.Meeting.field.description.html=true
 autoadmin.model.Meeting.field.meetingDate.label=Date
