Added PrePersist and PreUpdate methods to BlogEntry to handle timestamps Case fixes in Attachment Added "sticky" support to BlogEntry Home page now returns top X most recent entries (currently hardcoded to 10) Added AttachmentHandlerPhaseListener to allow for nicer URLs to fetch attachments

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -24,10 +24,8 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
-    <!--
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/autoAdmin/*</url-pattern>
+        <url-pattern>/attachments/*</url-pattern>
     </servlet-mapping>
-    -->
 </web-app>
